<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="clear_btn"
                android:text="@string/clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/para_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="para_btn"
                android:text="("
                android:textSize="24sp" />

            <Button
                android:id="@+id/close_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"

                android:background="@drawable/circle"
                android:onClick="close_btn"
                android:text=")"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="14dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="cancel_btn"
                android:src="@drawable/back"
                android:textSize="24sp"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="one_btn"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="two_btn"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="three_btn"
                android:text="@string/three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/mul_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="mul_btn"
                android:text="@string/mul"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="four_btn"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="five_btn"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="six_btn"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sum_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="sum_btn"
                android:text="@string/sum"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="seven_btn"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button16"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="eight_btn"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="nine_btn"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sub_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="sub_btn"
                android:text="@string/sub"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sign_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="sign_btn"
                android:text="00"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="zero_btn"
                android:text="@string/zero"
                android:textSize="24sp"
                app:iconTint="@color/teal_700"
                app:rippleColor="@color/teal_200" />

            <Button
                android:id="@+id/div_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="div_btn"
                android:text="@string/div"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalto"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:onClick="equal_btn"
                android:text="@string/equal"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the number"
        android:textSize="35sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="123dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>